--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -80,30 +80,16 @@ html {
     font-size: 1.2rem;
     margin-bottom: 30px;
   }
-  
-  .hero-content button {
-    padding: 15px 30px;
-    background-color: #7b4a3d;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-  
+
   .upload-button {
     padding: 10px 20px;
-    background-color: #7b4a3d; /* Button background color */
+    background-color: white;
     color: white;
     border: none;
     border-radius: 15px; /* Rounded edges to match input */
     font-size: 1rem;
     cursor: pointer;
-    transition: background-color 0.3s;
     width: 180px;
-  }
-
-  .upload-button:hover {
-    background-color: #5f372c; /* Darker shade on hover */
   }
 
   /* Why DermViT Section */
@@ -240,4 +226,225 @@ html {
   .faq-item h3:hover + p {
     display: block;
   }
-  
+
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    top: 10px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dim background */
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* Modal content box */
+  .modal-content {
+    position: relative;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 370px;
+    max-height: 550px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      border: none;
+      background: white;
+      cursor: pointer;
+  }
+
+  .modal-content-skin {
+    position: relative;
+  }
+
+  #close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      border: none;
+      background: #7b4a3d;
+      cursor: pointer;
+  }
+  .close-btn:hover {
+    background-color: #d32f2f;
+  }
+
+  #preview {
+    border-radius: 10px;
+  }
+
+  .skin-type-section {
+    display: flex;
+    gap: 30px;
+  }
+
+  .skin-type-set-two {
+      display: inline-block;
+  }
+
+  .skin-type-set-one {
+      display: inline-block;
+      height : 70%;
+  }
+
+  .skin-type-section button{
+      background-color: #fff;
+      color : #7b4a3d;
+      border : 1px solid #7b4a3d;
+      height : 300px;
+      width : 200px;
+      font-size : 5px;
+      display: flex;
+      flex-direction: column; /* Stack image and text vertically */
+      align-items: center; /* Keep them centered horizontally */
+      justify-content: flex-start; /* Push content to the top */
+      padding-top: 0;
+      border-radius: 15px;
+      cursor: pointer;
+  }
+
+  .modal-content-skin {
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    width: 900px;
+    height: 80%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .skin-normal img{
+    height: 60%;
+    width: 90%;
+    border-radius: 75px;
+    padding-top: 5px;
+  }
+
+  .skin-normal p{
+    font-size: 12px;
+  }
+
+  .skin-normal h2{
+    font-size: 12px;
+  }
+
+  .modal-content-skin h3{
+    color: #7b4a3d;
+  }
+
+  .submit-section button{
+      display: flex;
+      flex-direction: column; /* Stack image and text vertically */
+      align-items: center; /* Keep them centered horizontally */
+      width: 360px;
+      margin-bottom: 5px;
+  }
+
+  .dropbtn {
+  background-color: #7b4a3d;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  position: flex;
+  align-items: center;
+  width: 700px;
+  margin-top: 0px;
+  margin-bottom: 15px;
+}
+
+.dropdown {
+  position: flex;
+  align-items: center;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: center;
+  background-color: #fff;
+  width: 700px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content p {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown button{
+    border-radius: 15px;
+}
+
+.show {display: block;}
+
+.modal-content-necz {
+  background-color: #fff;
+  padding: 20px;
+  padding-top: 10px;
+  border-radius: 8px;
+  width: 700px;
+  height: 80%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  max-height: 80vh;
+  overflow-y: auto;
+  position: relative;
+}
+
+h3 {
+  text-align: left;
+}
+
+.dermvit-button{
+    padding: 15px 30px;
+    background-color: #7b4a3d;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+
+.dermvit-button:hover {
+    background-color: #5f372c; /* Darker shade on hover */
+}
+
+.upload-btn {
+    border: none;
+    background-color: white;
+}
+
+.upload-btn img{
+    width: 250px;
+}
+
+#upImg {
+    width: 350px;
+    max-height: 250px;
+}
+
+.predict-labels{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#predict_label{
+   padding-top: 5px;
+}
+
+.foot-text{
+    padding-left: 150px;
+}
