--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DermViT Landing Page</title>
-  <link rel="stylesheet" href="../static/styles/landingPage.css"> <!-- Link the CSS file -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DermViT Landing Page</title>
+    <link rel="stylesheet" href="../static/styles/landingPage.css"> <!-- Link the CSS file -->
 </head>
 <body>
-
-  <!-- Full-screen Banner -->
-  <div class="banner">
+<!-- Full-screen Banner -->
+<div class="banner">
     <div class="overlay">
-      <div class="content">
-        <h1>Achieve Healthier Skin with Confidence</h1>
-        <p>
-          Struggling with skin concerns? DermViT is here to help. Using advanced AI technology, we provide accurate skin disease detection and guidance, empowering you to take control of your skin health effortlessly and confidently.
-        </p>
-        <button class="cta-button">
-          <img src="../static/images/right-arrow 1.png" alt="Arrow Icon" class="icon">
-          Start your Consultation Now
-        </button>
-      </div>
+        <div class="content">
+            <h1>Achieve Healthier Skin with Confidence</h1>
+            <p>
+                Struggling with skin concerns? DermViT is here to help. Using advanced AI technology, we provide
+                accurate skin disease detection and guidance, empowering you to take control of your skin health
+                effortlessly and confidently.
+            </p>
+            <button class="cta-button">
+                <a href="{{url_for('home')}}">
+                    <img src="../static/images/right-arrow 1.png" alt="Arrow Icon" class="icon">
+                    Start your Consultation Now
+                </a>
+            </button>
+        </div>
     </div>
-  </div>
+</div>
 </body>
 </html>
